frontend/test/should_fail/index_pattern_multiple_fromto_argument3_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	n:N{multiple(Ni >= 42, Ni <= 44, N2j >= 0.0, N2j <= 1)};
	
	modify {
	}
}
